# myaku

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix
module/: default.nix
src/: config.rs  input.rs  lib.rs  main.rs  mcp.rs  scripting.rs
src/graph/: mod.rs  ring_buffer.rs
src/metrics/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs
src/platform/: mod.rs
src/platform/macos/: mod.rs
src/process/: mod.rs
src/render/: mod.rs
