[package]
name = "myaku"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Myaku (脈) — GPU system monitor for macOS and Linux"
homepage = "https://github.com/pleme-io/myaku"
repository = "https://github.com/pleme-io/myaku"
readme = "README.md"
license = "MIT"
categories = ["os::macos-apis"]
keywords = ["system-monitor", "activity-monitor", "macos", "gpu"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dependencies]
# Pleme-io shared libraries
garasu = { path = "../garasu" }
madori = { path = "../madori" }
egaku = { path = "../egaku" }
shidou = { path = "../shidou" }
soushi = { path = "../soushi" }
awase = { path = "../awase" }
kaname = { path = "../kaname" }
rmcp = { version = "0.15", features = ["server", "transport-io"] }
schemars = "0.8"

# GPU rendering (direct wgpu types needed in render code)
wgpu = "25"

# Text rendering
glyphon = "0.9"

# System metrics
sysinfo = "0.33"

# CLI and config
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

# GPU data upload
bytemuck = { version = "1", features = ["derive"] }

# Async runtime (for daemon mode)
tokio = { version = "1", features = ["full"] }

# Directory paths
dirs = "6.0"

[dev-dependencies]
tempfile = "3"

# Unify path deps with git deps used by madori/garasu
[patch."https://github.com/pleme-io/garasu"]
garasu = { path = "../garasu" }

[patch."https://github.com/pleme-io/shikumi"]
shikumi = { path = "../shikumi" }

[patch."https://github.com/pleme-io/shidou"]
shidou = { path = "../shidou" }

[patch."https://github.com/pleme-io/egaku"]
egaku = { path = "../egaku" }

[patch."https://github.com/pleme-io/kaname"]
kaname = { path = "../kaname" }

[patch."https://github.com/pleme-io/soushi"]
soushi = { path = "../soushi" }

[patch."https://github.com/pleme-io/awase"]
awase = { path = "../awase" }
